--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <div class="sticky-paper-head has-shadow">
+            <div class="sticky-paper-head top has-shadow">
                 <div class="content">
                     <div class="social-icons">
                         <ul>
@@ -71,7 +71,7 @@
                 <nav class="hidden-xs visible-lg ">
                     <ul class="nav">
                         <li class="active">
-                            <a  href="index.html#home">home</a>
+                            <a  href="index.html#home">about me</a>
                         </li>
                         <li>
                             <a  href="#profile">profile</a>
@@ -84,6 +84,9 @@
                         </li>
                         <li>
                             <a  href="#skills">skills</a>
+                        </li>
+                        <li>
+                            <a  href="#recommendations">recommendations</a>
                         </li>
                         <li>
                             <a  href="#portfolio">portfolio</a>
@@ -933,13 +936,13 @@
                                     <div class="event-item timeline-item">
                                         <div class="event-content timeline-content left">
                                             <p>
-                                                Ivana and I met through a mutual business connection about a year ago. Since then I have learned of Ivana's passion for social media and attention to detail. I highly recommend Ivana to anyone planning their social media strategy and wants to work with a professional who delivers 5 star service.
+                                                Ivana is very committed to what she does and takes work very seriously. She is a quick and creative thinker who knows how to ask the right question, open-minded and communicative, with high IT skills. As a team member, she is a very cooperative employee and a person you can rely on. Her main tasks (besides mentoring) were to explore new technologies and develop business solutions based on the Microsoft technology. Dealing with the issues of new technology tools is just one of many challenges for her.
                                             </p>
 
                                         </div>
                                         <div class="event-title right">
-                                            <h1>Carmen Perez</h1>
-                                            <h4>Mentor for Entrepreneurs</h4>
+                                            <h1>Ana Vrkic</h1>
+                                            <h4>Head of Department, Rathmann</h4>
                                             <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
                                         </div>
 
@@ -955,12 +958,29 @@
 
                                         <div class="event-content timeline-content right">
                                             <p>
-                                                Ivana is professional and highly skilled IT professional. She possesses superb skills and is an amazing person to work with. She is a leader in her field. I highly recommend her.
+                                                Ivana and I met through a mutual business connection about a year ago. Since then I have learned of Ivana's passion for social media and attention to detail. I highly recommend Ivana to anyone planning their social media strategy and wants to work with a professional who delivers 5 star service.
                                             </p>
 
                                         </div>
 
                                     </div>
+
+                                    <div class="event-item timeline-item">
+                                        <div class="event-content timeline-content left">
+                                            <p>
+                                                Ivana is professional and highly skilled IT professional. She possesses superb skills and is an amazing person to work with. She is a leader in her field. I highly recommend her.
+                                            </p>
+
+                                        </div>
+                                        <div class="event-title right">
+                                            <h1>Carmen Perez</h1>
+                                            <h4>Mentor for Entrepreneurs</h4>
+                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
+                                        </div>
+
+                                    </div>
+
+
                                 </div>
                             </div>
                         </div>
