add recommendations nav to blog posts

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <nav class="hidden-xs visible-lg ">
                     <ul class="nav">
                         <li class="active">
-                            <a  href="index.html#home">about me</a>
+                            <a  href="#home">about me</a>
                         </li>
                         <li>
                             <a  href="#profile">profile</a>
