--- a/evolution-of-electronic-payment-systems.html
+++ b/evolution-of-electronic-payment-systems.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
 
-            <div class="sticky-paper-head has-shadow">
+            <div class="sticky-paper-head top has-shadow">
                 <div class="content">
                     <div class="social-icons">
                         <ul>
@@ -70,7 +70,7 @@
                 <nav class="hidden-xs visible-lg ">
                     <ul class="nav">
                         <li class="active">
-                            <a  href="index.html#home">home</a>
+                            <a  href="index.html#home">about me</a>
                         </li>
                         <li>
                             <a  nhref="index.html#profile">profile</a>
@@ -83,6 +83,10 @@
                         </li>
                         <li>
                             <a  href="index.html#skills">skills</a>
+                        </li>
+
+                        <li>
+                            <a  href="index.html#recommendations">recommendations</a>
                         </li>
                         <li>
                             <a  href="index.html#portfolio">portfolio</a>
