fixed title and added favicon in blog posts

--- a/evolution-of-electronic-payment-systems.html
+++ b/evolution-of-electronic-payment-systems.html
@@ -5,7 +5,7 @@
 
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-    <title>Papyrus - Responsive Resume Template</title>
+    <title>Ivana Zuber - Creative Resume</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="author" content="Amin Diary - Aka: LeAmino">
     <meta name="keywords" content="Responsive, Template">
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
+
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
 
 
