removed title from portfolio image

--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
 
                                 <div id="portfolio-grid" class="row">
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development illustration">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/Tagmatic6.PNG" title="Project Management App. Code is available at https://github.com/ivanaszuber/tagmatic. Demo is at http://ivanaszuber.github.io/tagmatic/demo/">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/Tagmatic6.PNG">
                                             <img alt="" src="assets/images/portfolio/Tagmatic6-min.png"   />
                                         </a>
                                         <div class="holder">
