--- a/index.html
+++ b/index.html
@@ -888,13 +888,11 @@
                                 </div>
                                 <div class="timeline-body">
                                     <div class="event-item timeline-item">
-
                                         <div class="event-title left">
                                             <h1>Robby Dermody</h1>
                                             <h4>President, Symbiont</h4>
                                             <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
                                         </div>
-
                                         <div class="event-content timeline-content right">
                                             <p>
                                                 I've been working with Ivana extensively for over a year now, on both the Counterparty and Symbiont teams, and have been very happy with the quality of her work. On top of being intelligent and able to figure things out on the fly, she's a very hard and diligent worker. The breadth of her skillset allows her to be very flexible, and to be able to adapt herself to most any situation she's put in. She's done a very good job on everything from marketing to software development for us. Highly satisfied.
@@ -905,96 +903,98 @@
                                     <div class="event-item timeline-item">
                                         <div class="event-content timeline-content left">
                                             <p>
-                                                Ivana was very professional to work with. Her large scope of skills made her a valuable team member. I urge any future employer to carefully consider Ivana who is a hard-working and top-performing Frontend Developer and General Manager.
+                                                Over the past year, I've worked with Ivana on a number of projects relating to digital currency, open-source software and non-profit organization management. She has proved herself diligent in the fulfillment of her duties and an all-around hard worker. She is a trustworthy and reliable employee.
                                             </p>
-
                                         </div>
                                         <div class="event-title right">
+                                            <h1>Adam Krellenstein</h1>
+                                            <h4>Chief Scientist, Counterparty Foundation</h4>
+                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
+                                        </div>
+                                    </div>
+
+                                    <div class="event-item timeline-item">
+                                        <div class="event-title left">
                                             <h1>Ouziel Slama</h1>
                                             <h4>Principal Software Engineer, Counterparty</h4>
                                             <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
                                         </div>
-                                    </div>
-
-
-                                    <div class="event-item timeline-item">
-
-                                        <div class="event-title left">
-                                            <h1>Evan Wagner</h1>
-                                            <h4>Founder, Counterparty</h4>
-                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
-                                        </div>
                                         <div class="event-content timeline-content right">
                                             <p>
-                                                Ivana's work as General Manager of the Counterparty Foundation is superb. Her breadth of skills as a designer, frontend developer, copywriter, and social media lead is very rare to find. I cannot recommend her highly enough.
+                                                Ivana was very professional to work with. Her large scope of skills made her a valuable team member. I urge any future employer to carefully consider Ivana who is a hard-working and top-performing Frontend Developer and General Manager.
                                             </p>
-
                                         </div>
                                     </div>
+
 
                                     <div class="event-item timeline-item">
 
                                         <div class="event-content timeline-content left">
+                                            <p>
+                                                Ivana's work as General Manager of the Counterparty Foundation is superb. Her breadth of skills as a designer, frontend developer, copywriter, and social media lead is very rare to find. I cannot recommend her highly enough.
+                                            </p>
+                                        </div>
+                                        <div class="event-title right">
+                                            <h1>Evan Wagner</h1>
+                                            <h4>Founder, Counterparty</h4>
+                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
+                                        </div>
+                                    </div>
+
+                                    <div class="event-item timeline-item">
+                                        <div class="event-title left">
+                                            <h1>Jurica Smircic</h1>
+                                            <h4>CEO, Rathmann</h4>
+                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
+                                        </div>
+                                        <div class="event-content timeline-content right">
                                             <p>
                                                 Ivana is a dedicated, ambitious and result driven professional who always goes above and beyond of what is asked of her. She is able to quickly pick up new skills, learn new frameworks and languages and continually deliver results.
                                                 Her creative thinking, expertise, positive can-do attitude and drive made her an absolute pleasure to work with. I highly recommend her.
                                             </p>
                                         </div>
-                                        <div class="event-title right">
-                                            <h1>Jurica Smircic</h1>
-                                            <h4>CEO, Rathmann</h4>
-                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
-                                        </div>
-
-
-                                    </div>
-
-                                    <div class="event-item timeline-item">
-
-                                        <div class="event-title left">
-                                            <h1>Ana Vrkic</h1>
-                                            <h4>Head of Department, Rathmann</h4>
-                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
-                                        </div>
-                                        <div class="event-content timeline-content right">
-                                            <p>
-                                                Ivana is very committed to what she does and takes work very seriously. She is a quick and creative thinker who knows how to ask the right question, open-minded and communicative, with high IT skills. As a team member, she is a very cooperative employee and a person you can rely on. Her main tasks (besides mentoring) were to explore new technologies and develop business solutions based on the Microsoft technology. Dealing with the issues of new technology tools is just one of many challenges for her.
-                                            </p>
-
-                                        </div>
-
                                     </div>
 
                                     <div class="event-item timeline-item">
                                         <div class="event-content timeline-content left">
                                             <p>
-                                                Ivana is professional and highly skilled IT professional. She possesses superb skills and is an amazing person to work with. She is a leader in her field. I highly recommend her.
+                                                Ivana is very committed to what she does and takes work very seriously. She is a quick and creative thinker who knows how to ask the right question, open-minded and communicative, with high IT skills. As a team member, she is a very cooperative employee and a person you can rely on. Her main tasks (besides mentoring) were to explore new technologies and develop business solutions based on the Microsoft technology. Dealing with the issues of new technology tools is just one of many challenges for her.
                                             </p>
-
                                         </div>
                                         <div class="event-title right">
-                                            <h1>Carmen Perez</h1>
-                                            <h4>Mentor for Entrepreneurs</h4>
+                                            <h1>Ana Vrkic</h1>
+                                            <h4>Head of Department, Rathmann</h4>
                                             <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
                                         </div>
-
                                     </div>
 
                                     <div class="event-item timeline-item">
 
                                         <div class="event-title left">
-                                            <h1>Yvonne Roga</h1>
-                                            <h4>Executive Assistant and Transcriptionist</h4>
+                                            <h1>Carmen Perez</h1>
+                                            <h4>Mentor for Entrepreneurs</h4>
                                             <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
                                         </div>
-
                                         <div class="event-content timeline-content right">
+                                            <p>
+                                                Ivana is professional and highly skilled IT professional. She possesses superb skills and is an amazing person to work with. She is a leader in her field. I highly recommend her.
+                                            </p>
+
+                                        </div>
+                                    </div>
+
+                                    <div class="event-item timeline-item">
+                                        <div class="event-content timeline-content left">
                                             <p>
                                                 Ivana and I met through a mutual business connection about a year ago. Since then I have learned of Ivana's passion for social media and attention to detail. I highly recommend Ivana to anyone planning their social media strategy and wants to work with a professional who delivers 5 star service.
                                             </p>
 
                                         </div>
-
+                                        <div class="event-title right">
+                                            <h1>Yvonne Roga</h1>
+                                            <h4>Executive Assistant and Transcriptionist</h4>
+                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
+                                        </div>
                                     </div>
 
 
