--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                                         <div class="event-content timeline-content right">
                                             <p>
                                                 Writing and editing content, conducting online marketing initiatives, market research analysis & website development and optimization for clients.
-                                                Developing and/or modifying plugins: HTML, CSS, JavaScript, jQuery, php
+                                                Developing and/or modifying plugins: HTML, CSS, JavaScript, jQuery
                                             </p>
                                         </div>
 
