--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <a class="fa fa-google-plus" href="https://plus.google.com/u/0/+IvanaZuber_BloggLess" rel="parent" target="_blank"></a>
                             </li>
                             <li>
-                                <a class="fa fa-youtube" href="https://www.youtube.com/watch?v=pSBz6PWXtlY" rel="parent" target="_blank"></a>
+                                <a class="fa fa-facebook" href="https://www.facebook.com/ivanas.zuber" rel="parent" target="_blank"></a>
                             </li>
 
                         </ul>
@@ -208,7 +208,7 @@
                                             <a class="fa fa-google-plus" href="https://plus.google.com/u/0/+IvanaZuber_BloggLess" rel="parent" target="_blank"></a>
                                         </li>
                                         <li>
-                                            <a class="fa fa-youtube" href="https://www.youtube.com/watch?v=pSBz6PWXtlY" rel="parent" target="_blank"></a>
+                                            <a class="fa fa-linkedin" href="https://hr.linkedin.com/in/ivanazuber" rel="parent" target="_blank"></a>
                                         </li>
 
                                     </ul>
@@ -1728,7 +1728,7 @@
                                             <a class="fa fa-google-plus" href="https://plus.google.com/u/0/+IvanaZuber_BloggLess"></a>
                                         </li>
                                         <li>
-                                            <a class="fa fa-youtube" href="https://www.youtube.com/watch?v=pSBz6PWXtlY"></a>
+                                            <a class="fa fa-linkedin" href="https://hr.linkedin.com/in/ivanazuber" rel="parent" target="_blank"></a>
                                         </li>
                                     </ul>
                                 </div>
