--- a/evolution-of-electronic-payment-systems.html
+++ b/evolution-of-electronic-payment-systems.html
@@ -53,14 +53,14 @@
                                 <a class="fa fa-twitter" href="https://twitter.com/ivanazuber"></a>
                             </li>
                             <li>
-                                <a class="fa fa-facebook" href="https://www.facebook.com/ivanas.zuber"></a>
+                                <a class="fa fa-linkedin" href="https://hr.linkedin.com/in/ivanazuber" rel="parent" target="_blank"></a>
                             </li>
 
                             <li>
                                 <a class="fa fa-google-plus" href="https://plus.google.com/u/0/+IvanaZuber_BloggLess"></a>
                             </li>
                             <li>
-                                <a class="fa fa-youtube" href="https://www.youtube.com/watch?v=pSBz6PWXtlY"></a>
+                                <a class="fa fa-facebook" href="https://www.facebook.com/ivanas.zuber"></a>
                             </li>
 
                         </ul>
@@ -328,7 +328,7 @@
                                             <a class="fa fa-google-plus" href="https://plus.google.com/u/0/+IvanaZuber_BloggLess"></a>
                                         </li>
                                         <li>
-                                            <a class="fa fa-youtube" href="https://www.youtube.com/watch?v=pSBz6PWXtlY"></a>
+                                            <a class="fa fa-facebook" href="https://www.facebook.com/ivanas.zuber"></a>
                                         </li>
                                     </ul>
                                 </div>
