added buffer to experience

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="content">
                     <h1>Ivana Zuber</h1>
                     <div class="short-tag">
-                        frontend developer
+                        full-stack developer
                     </div>
                 </div>
             </div>
@@ -148,16 +148,11 @@
                     <div class="row">
                         <div class="col-xs-12 col-md-7">
                             <div class="le-paragraph">
-                                <p>As an experienced <strong>software developer</strong>, project manager and digital marketer, I enjoy building innovative and game-changing software solutions and participating in all phases of the product's life-cycle: from planning & development to management and promotion.
-                                </p>
-                                <p>
-                                    I have been working in the software development industry for <strong>over 9 years</strong>, either as a software developer, project manager or communications lead.
-                                </p>
-                                <p>
-                                    Currently I'm working as a <strong>Frontend Developer</strong> at Symbiont, General Manager at Counterparty and Executive Director at Counterparty Foundation.
-                                </p>
-                                <p>
-                                    Feel free to browse through the site, check out my latest posts and projects, and if you come up with an awesome new challenge for me, be sure to give me a buzz :D !
+                                <p><strong>Hi there!</strong></p>
+                                <p>Thanks so much for dropping by :)!</p>
+                                <p>My name is Ivana and, among other things, I love architecting, designing and building web applications :-). </p>
+                                <p>If you're curious what I've been
+                                up to for the last 10 years, feel free to browse through the site, check out my latest posts and projects, and if you come up with an awesome new challenge for me, be sure to give me a buzz :D !
                                 </p>
                             </div>
                         </div>
@@ -340,8 +335,8 @@
                                 <div class="interests-row big">
                                     <ul>
                                         <li class="wow bounceInDown" data-wow-delay="0.5s">
-                                            <i class="fa fa-bug"></i>
-                                            <span>TDD</span>
+                                            <i class="fa fa-code"></i>
+                                            <span>JavaScript</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.6s">
                                             <i class="fa fa-html5"></i>
@@ -353,7 +348,7 @@
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.8s">
                                             <i class="fa fa-codepen"></i>
-                                            <span>AngularJS</span>
+                                            <span>PHP</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -365,20 +360,20 @@
                                 <div class="interests-row big">
                                     <ul>
                                         <li class="wow bounceInDown" data-wow-delay="0.1s">
-                                            <i class="fa fa-bitcoin"></i>
-                                            <span>Bitcoin</span>
+                                            <i class="fa fa-bug"></i>
+                                            <span>AngularJS</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.2s">
                                             <i class="fa fa-circle-o-notch"></i>
-                                            <span>Blockchain</span>
+                                            <span>MeteorJS</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.3s">
-                                            <i class="fa fa-suitcase"></i>
-                                            <span>Agile</span>
+                                            <i class="fa fa-database"></i>
+                                            <span>MongoDB</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.4s">
                                             <i class="fa fa-desktop"></i>
-                                            <span>UI/UX</span>
+                                            <span>NodeJS</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -391,15 +386,15 @@
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.6s">
                                             <i class="fa fa-database"></i>
-                                            <span>Database</span>
+                                            <span>SQL</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.7s">
                                             <i class="fa fa-git"></i>
                                             <span>Git</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.8s">
-                                            <i class="fa fa-bug"></i>
-                                            <span>Testing</span>
+                                            <i class="fa fa-bitcoin"></i>
+                                            <span>Bitcoin</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -430,6 +425,21 @@
                                     </div>
                                 </div>
                                 <div class="timeline-body">
+                                    <div class="event-item timeline-item">
+
+                                        <div class="event-content timeline-content left">
+                                            <p>
+                                                Developing applications such as the Optimal Timing Tool, Salary App, Buffer home pages (PHP, MongoDB, BackboneJS, ReactJS, gulp, grunt...). Participating in the development of the Buffer Web app. Rearchitecting and developing <a href="https://respond.buffer.com" target="_blank">Respond app</a> (MeteorJS, CoffeeScript, AWS).
+                                            </p>
+                                        </div>
+
+                                        <div class="event-title right">
+                                            <h1>Full-Stack Developer</h1>
+                                            <h4>Buffer Inc.<small>2015-PRESENT</small></h4>
+                                        </div>
+
+                                    </div>
+
                                     <div class="event-item timeline-item">
 
                                         <div class="event-title left">
@@ -690,12 +700,42 @@
                                     <div class="skill-holder timeline-item">
 
                                         <div class="skill-item left">
+                                            <div class="skill"  data-text="73%" data-info="MongoDB"   data-percent="73"   data-fill="#272425"></div>
+                                        </div>
+
+                                        <div class="event-content timeline-content right">
+                                            <p>
+                                                Working with MongoDB during the development of buffer apps and the <a href="https://respond.buffer.com" target="_blank">Respond app</a>.
+                                            </p>
+                                        </div>
+
+                                    </div>
+
+                                    <div class="skill-holder timeline-item">
+
+                                        <div class="event-content timeline-content left">
+                                            <p>
+                                                Developing MeteorJS app with the Respond team.
+                                                <br> <br>
+                                            </p>
+                                        </div>
+
+                                        <div class="skill-item right">
+                                            <div class="skill"  data-text="70%" data-info="METEORJS"   data-percent="73"   data-fill="#272425"></div>
+                                        </div>
+
+                                    </div>
+
+
+                                    <div class="skill-holder timeline-item">
+
+                                        <div class="skill-item left">
                                             <div class="skill"  data-text="73%" data-info="AngularJS"   data-percent="73"   data-fill="#272425"></div>
                                         </div>
 
                                         <div class="event-content timeline-content right">
                                             <p>
-                                                Developed several web applications using AngularJS, RequireJS, UI Router, UI Grid, Lodash and many more libraries with <strong>over 80%</strong> unit test code coverage.
+                                                Developed several web applications using AngularJS, RequireJS, UI Router, UI Grid, Lodash ...
                                             </p>
                                         </div>
 
@@ -706,7 +746,7 @@
 
                                         <div class="event-content timeline-content left">
                                             <p>
-                                                Built <strong>over 20 websites</strong> modifying existing HTML & CSS templates, tweaking the design till perfection.
+                                                Built <strong>20+ websites</strong>, tweaking the design till perfection :-).
                                                 <br> <br>
                                             </p>
                                         </div>
@@ -726,7 +766,7 @@
 
                                         <div class="event-content timeline-content right">
                                             <p>
-                                                After coding in #C and XAML for over 4 years I developed a passion for JavaScript. The rest is history.
+                                                After coding in #C and XAML for over 4 years I developed a passion for JavaScript.
                                             </p>
                                         </div>
 
@@ -817,44 +857,25 @@
 
                                         <div class="event-content timeline-content right">
                                             <p>
-                                                Certified MCITP with over 7 years experience in SQL, although recently starting to explore <strong>NoSQL databases</strong>.
+                                                Certified MCITP with over 7 years experience in SQL.
                                             </p>
                                         </div>
 
                                     </div>
 
 
-
                                     <div class="skill-holder timeline-item">
-
                                         <div class="event-content timeline-content left">
-                                            <p>
-                                                Although I only recently started working on solutions related to financial markets I quickly gained experience and knowledge of FinTech.
-                                            </p>
-                                        </div>
-
-                                        <div class="skill-item right">
-                                            <div class="skill"  data-text="63%" data-info="FinTech"   data-percent="63"   data-fill="#272425"></div>
-                                        </div>
-
-
-
-                                    </div>
-
-                                    <div class="skill-holder timeline-item">
-
-
-
-
-                                        <div class="skill-item left">
-                                            <div class="skill"  data-text="73%" data-info="Other"   data-percent="73"   data-fill="#847066"></div>
-                                        </div>
-
-                                        <div class="event-content timeline-content right">
                                             <p>
                                                 Linux, Git, GitHub, Docker, Bootstrap, D3.js, Node.js, Karma, Jasmine, Bitcoin, Social Media Marketing, ERP, WordPress, Scrum, Agile Project Management
                                             </p>
                                         </div>
+
+                                        <div class="skill-item right">
+                                            <div class="skill"  data-text="73%" data-info="Other"   data-percent="73"   data-fill="#847066"></div>
+                                        </div>
+
+
 
                                     </div>
 
